--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "is-string",
-  "description": "Check if a value is a string",
+  "name": "@micro-js/is-string",
+  "description": "Check if string.",
   "repository": "git://github.com/micro-js/is-string.git",
   "version": "0.1.0",
   "license": "MIT",
   "main": "lib/index.js",
+  "scripts": {
+    "postversion": "git push && git push --tags && npm publish --access=public"
+  },
   "dependencies": {},
   "devDependencies": {
-    "tape": "^4.2.0",
-    "standard": "^4.0.0"
+    "tape": "^4.2.2",
+    "standard": "^5.4.1"
   }
 }
