--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@micro-js/is-string",
+  "name": "@f/is-string",
   "description": "Check if string.",
   "repository": "git://github.com/micro-js/is-string.git",
   "version": "1.0.1",
